# loxxy

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  flake.nix  sample.lox
lib/: CMakeLists.txt  lexer.cpp
lib/ast/: ast.cpp  building.cpp  hash.cpp  nodes.cpp  token.cpp  type_traits.cpp  value.cpp
lib/ast/builders/: boxed.cpp  hash_payload.cpp  offset.cpp  offset_dedupl.cpp  rc.cpp
lib/ast/include/loxxy/: ast.hpp
lib/ast/visitors/: copier.cpp  extractor.cpp  hasher.cpp  interpreter.cpp  llvm.cpp  printer.cpp
lib/parser/: left_recursive.cpp  lr.cpp  parser.cpp  rd.cpp
lib/utils/: generic_stream.cpp  multi_vector.cpp  myassert.h  string_store.cpp  stupid_type_traits.cpp  tqstream.cpp  variant.cpp
lib/utils/murmurhash/: murmurhash.cpp  murmurhash2.cpp  murmurhash3.cpp
test/: CMakeLists.txt  test_lexer.cpp  test_string_store.cpp  test_tqstream.cpp  test_variant.cpp
